# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: conftest.py  example.env  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: statuses.json  tasks.json  users.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/labels/templates/: create_label.html  show_labels.html
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/statuses/templates/: confirm_delete.html  create.html  show_statuses.html
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_alter_task_name.py  0002_alter_task_status.py  0003_alter_task_created_by_alter_task_executor.py  0004_alter_task_created_by_alter_task_description_and_more.py  0005_alter_task_status.py  0006_alter_task_created_by.py
task_manager/tasks/templates/: show_tasks.html  task_detail.html
task_manager/templates/: confirm_delete.html  greeting.html  index.html  navbar.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/: confirm_delete.html  login.html  show_users.html  signup.html  update.html
